SVFrameLib: restore Adventure parser and built-in tag parity